--- a/www/templates/happercreated.html
+++ b/www/templates/happercreated.html
@@ -1,7 +1,7 @@
 <ion-view>
 <ion-content class="info_bg">
 	<div class="row" ng-repeat="items in viewhaps" ng-if="$index % 2 === 0">
-		<div class="col">
+		<div class="col-50">
 	<div class="card" >
   <div class="item item-text-wrap" ng-click="clickedonHap({{viewhaps[$index].id}})">
 		<div class="row">
@@ -12,7 +12,6 @@
 				<span class="catagory_myhaps text_truncate">{{viewhaps[$index].catgory}}</span>
 			</div>
 			</div>
-
 			<br/>
 
 			<div align="left">
@@ -60,7 +59,7 @@
 </div>
 
 
-<div class="col" >
+<div class="col-50" >
 <div class="card" ng-show="{{viewhaps[$index+1]}}">
 <div class="item item-text-wrap" ng-click="clickedonHap({{viewhaps[$index+1].id}})">
 <div class="row">
