--- a/www/templates/profileuser.html
+++ b/www/templates/profileuser.html
@@ -1,6 +1,6 @@
 <ion-slide>
   <ion-view view-title="CREATE">
-<ion-content>
+<ion-content style="height:100%; overflow:hidden;">
   <!--<div align="left" class="row bar bar_visituser">
   <div class="col-33">
   <i class="icon ion-android-arrow-back back_arrow_icon_visituser" ui-sref="app.mainnow"></i>
@@ -18,9 +18,9 @@
   </div>
 
   </div>-->
-  
-  
-  
+
+
+
   <div align="left" class="bar_visituser">
     <div class="row">
       <div class="col-33">
@@ -32,12 +32,12 @@
       </div>
 
 
-     
+
   <div class="col-33">
   &nbsp;
   </div>
 </div>
-    
+
  <div >
     <center>  <h4 class="user_text_visituser">{{displayProfile.fname}} </h4></center>
       <center> <button class="button  button-calm button_following_visituser" ng-if="follow == 'No'" ng-click="followUser()">FOLLOW</button></center>
