--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -125,10 +125,10 @@
         </ion-item> -->
         <!--<ion-item menu-close class="menu_list" ui-sref="charity">
           Charity
-        </ion-item>
-        <ion-item menu-close class="menu_list" ui-sref="aboutUs">
-          About Us
         </ion-item>-->
+        <!-- <ion-item menu-close class="menu_list" ui-sref="aboutUs">
+          About Us
+        </ion-item> -->
          <ion-item menu-close class="menu_list"  ui-sref="viewgroup.lists" ng-if="user != undefined">
          Groups
         </ion-item>
