--- a/www/templates/userfollowing.html
+++ b/www/templates/userfollowing.html
@@ -4,21 +4,18 @@
 		<img src="{{image}}" ui-sref="editprofile" class="imageInProfile">
 		<p>Some Name</p>
 	</div>
-	<ion-item style="top: 40px;padding: 10px 10px 10px 10px;background: none;position: absolute;width: 100%;">
-			<div class="row">
-				<div class="col-75" style="padding:12px 0 0 0;">
-					<input  type="search" placeholder="Search by firstname" class="searchhapsfollowing" ng-model="obj.searchFollowingTxt" style="position: absolute;background-color: #fff;
-		    z-index: 999; width: 70%; border-radius: 8px;border:1px solid #cccccc;">
-				</div>
-				<div class="col-20" style="padding:3px 0 0 10px;">
-					<button class="button button-block button-positive button_ok" style="left: 15px; width:100%; min-height:30px!important;line-height:20px; margin-top:10px;"
-					ng-click="searchFollowing()">OK</button>
-				</div>
+	<!-- <ion-item style="top: 40px;padding: 10px 10px 10px 10px;background: none;position: absolute;width: 100%;">
+		<div class="row">
+			<div class="col-75" style="padding:12px 0 0 0;">
+				<input  type="search" placeholder="Search by firstname" class="searchhapsfollowing" ng-model="obj.searchFollowingTxt" style="position: absolute;background-color: #fff;
+	    z-index: 999; width: 70%; border-radius: 8px;border:1px solid #cccccc;">
 			</div>
-			<!-- <div align="left">
-			<h2 style="margin-top: 135px;">Some Name</h2>
-		</div> -->
-		</ion-item>
+			<div class="col-20" style="padding:3px 0 0 10px;">
+				<button class="button button-block button-positive button_ok" style="left: 15px; width:100%; min-height:30px!important;line-height:20px; margin-top:10px;"
+				ng-click="searchFollowing()">OK</button>
+			</div>
+		</div>
+	</ion-item> -->
 
 			<!--<div class="row">
 			<div class="col">
@@ -27,7 +24,7 @@
 			</div>
 		</div>-->
 	<div style="clear:both;"></div>
-<ion-content class="following_bg" style="height: 100%; top:222px; background-color: #E4E4E4 !important;">
+	<ion-content class="following_bg" style="height: 100%; top:222px; background-color: #E4E4E4 !important;">
 
 		<div style="margin-top:50px;">&nbsp;</div>
 	<div style="margin-bottom: 100px;">
@@ -47,20 +44,13 @@
 
 			<div class="col-40" ng-if="data.isfollowed == 'no'">
 				<!--<button ng-click="followUser(data.id)" class="button button-full button-calm button_following">FOLLOW</button>-->
-				<ion-toggle style="margin-bottom: 5px" class="toggle toggle-positive" ng-click="followUser(data.id)" ng-model="isChecked" ng-checked="false"></ion-toggle>
+				<ion-toggle style="margin-bottom: 5px; background-color: #e4e4e4;" class="toggle toggle-positive" ng-click="followUser(data.id)" ng-model="isChecked" ng-checked="false"></ion-toggle>
 	    </div>
 	    <div class="col-40" ng-if="data.isfollowed == 'yes'">
 				<!--<button ng-click="unfollowUser(data.id)" class="button button-full button-calm button_following">UNFOLLOW</button>-->
-	  	<ion-toggle style="margin-bottom: 5px" class="toggle toggle-positive" ng-click="unfollowUser(data.id)" ng-model="isChecked" ng-checked="true"></ion-toggle>
+	  	<ion-toggle style="margin-bottom: 5px;  background-color: #e4e4e4;" class="toggle toggle-positive" ng-click="unfollowUser(data.id)" ng-model="isChecked" ng-checked="true"></ion-toggle>
 	    </div>
 	  	</div>
-
-
-
-
-
-
 			</div>
   </ion-content>
-
 </ion-view>
