--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -126,9 +126,9 @@
         <!--<ion-item menu-close class="menu_list" ui-sref="charity">
           Charity
         </ion-item>-->
-        <!-- <ion-item menu-close class="menu_list" ui-sref="aboutUs">
-          About Us
-        </ion-item> -->
+        <ion-item menu-close class="menu_list" ui-sref="aboutUs">
+          About Us (2.0.1)
+        </ion-item>
          <ion-item menu-close class="menu_list"  ui-sref="viewgroup.lists" ng-if="user != undefined">
          Groups
         </ion-item>
